successfully imported relay to react-native

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "./node_modules/.bin/react-native-webpack-server start"
   },
   "dependencies": {
-    "react": "^0.14.0-beta3",
-    "react-native": "^0.10.1",
-    "react-relay": "^0.2.1"
+    "react-native": "^0.10.1"
   },
   "devDependencies": {
     "babel": "^5.8.23",
