--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "babel": "^5.8.23",
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "babel-relay-plugin": "^0.1.3",
     "react-hot-loader": "^1.3.0",
+    "react-native-browser-polyfill": "^0.1.1",
     "react-native-webpack-server": "^0.3.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
